src/index.css
body {
  margin: 0;
  font-family: "Open Sans Condensed", sans-serif !important;
}

h1,
h2,
h3,
h4 {
  font-weight: bold !important;
}

p {
  font-size: 1.4rem !important;
  line-height: 1.7;
  letter-spacing: 1;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

